--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/static/css/home_css.css">
+        <link rel="stylesheet" href="C:\Users\User\Documents\GitHub\hif_psit\static\css\home_css.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <title>Hif_Home</title>
     </head>
@@ -22,11 +22,11 @@
                     <label for="menu">MENU</label>
                     <div class="menu-x">
                         <ul>
-                            <li><a href="http://127.0.0.1:5000/">Home</a></li>
-                            <li><a href="http://127.0.0.1:5000/bmi">MyBMI</a></li>
-                            <li><a href="http://127.0.0.1:5000/hif_main">Your Body</a></li>
-                            <li><a href="http://127.0.0.1:5000/about">About</a></li>
-                            <li><a href="http://127.0.0.1:5000/help">Help</a></li>
+                            <li><a href="http://127.0.0.1:5000/"><p class="menu-text">Home</p></a></li>
+                            <li><a href="http://127.0.0.1:5000/bmi"><p class="menu-text">MyBMI</p></a></li>
+                            <li><a href="http://127.0.0.1:5000/hif_main"><p class="menu-text">Your Body</p></a></li>
+                            <li><a href="http://127.0.0.1:5000/about"><p class="menu-text">About</p></a></li>
+                            <li><a href="http://127.0.0.1:5000/help"><p class="menu-text">Help</p></a></li>
                         </ul>
                     </div>
                 </div>
@@ -51,5 +51,10 @@
                 <button class="new-btn" onclick="window.location.href='http://127.0.0.1:5000/hif_main'">Continue (Record : BMI)  <img class="image" src="..\static\img&icon\icon_btn2.png")></button>
             </div>
         </div>
+            <section>
+                <div id="stars"></div>
+                <div id="stars2"></div>
+                <div id="stars3"></div>
+            </section>
     </body>
 </html>
